cluster/apps/planner-gen/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planner-gen-deployment
  labels:
    app.kubernetes.io/name: planner-gen
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: planner-gen
  replicas: 2
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: planner-gen
    spec:
      imagePullSecrets:
        - name: ghcr-docker-pull-secret
      containers:
      - name: planner-gen
        image: ghcr.io/mwgustin/remarkably-organized:1.0.1
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: planner-gen-service
spec:
  selector:
    app.kubernetes.io/name: planner-gen
  ports:
    - protocol: TCP
      port: 3000
