cluster/apps/planner-gen/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: planner-gen
  namespace: default
  annotations:
    gethomepage.dev/description: Planner Generator
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Misc
    gethomepage.dev/icon: mdi-calendar-check
    gethomepage.dev/name: Planner Gen
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external
      namespace: envoy-gateway
  hostnames:
    - planner-gen.gustend.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: planner-gen-service
          port: 3000
          weight: 1
